--- a/private/kids-stats.html
+++ b/private/kids-stats.html
@@ -94,9 +94,6 @@
 								<li>
 									<a href="#"><span class="hr-stats hr-small"></span>Заказы</a>
 								</li>
-								<li>
-									<a href="#"><span class="hr-cart hr-small"></span>Продукты</a>
-								</li>
 							</ul>
 						</div>
 					</div>
@@ -112,139 +109,137 @@
 					</div>
 					<div class="outer scrollable-holder">
 						<div class="inner scrollable">
-							<section class="stats-holder">
-								<h2>Статистика покупок</h2>
-								<div class="table-holder">
-									<table>
-										<tr>
-											<th class="small double"><a href="#">Дата</a></th>
-											<th><a href="#">Наименование товара</a></th>
-											<th class="small double"><span>Количество</span></th>
-											<th class="small double"><span>Цена</span></th>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-										<tr>
-											<td class="small double"><span>22.10.2015</span></td>
-											<td><span>Сок Jaffa мультивитаминный</span></td>
-											<td class="small double"><span>1</span></td>
-											<td class="small double"><span>14,75 UAH</span></td>
-										</tr>
-									</table>
-								</div>
-							</section>
+							<h2>Сергей: статистика покупок</h2>
+							<div class="table-holder">
+								<table>
+									<tr>
+										<th class="small double"><a href="#">Дата</a></th>
+										<th><a href="#">Наименование товара</a></th>
+										<th class="small double"><span>Количество</span></th>
+										<th class="small double"><span>Цена</span></th>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+									<tr>
+										<td class="small double"><span>22.10.2015</span></td>
+										<td><span>Сок Jaffa мультивитаминный</span></td>
+										<td class="small double"><span>1</span></td>
+										<td class="small double"><span>14,75 UAH</span></td>
+									</tr>
+								</table>
+							</div>
 						</div>
 					</div>
 					<div class="action-panel-holder">
