private office update

--- a/private/kids-products.html
+++ b/private/kids-products.html
@@ -116,13 +116,117 @@
 					</div>
 					<div class="outer scrollable-holder products-holder">
 						<div class="inner scrollable">
+							<!--disable-active or enable-active class to activate btns(apply on grid)-->
 							<div class="grid">
 								<div class="row">
 									<article class="col">
 										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
-
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
 									</article>
 								</div>
+								<div class="row">
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+								</div>
+								<div class="row">
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+									<article class="col">
+										<figure><img src="../build/images/products/biscuit-chocolate/apple-pie.jpg" alt="Buiscuit-Chocolate | apple-pie"></figure>
+										<h2>Венский пирог - яблоко</h2>
+										<div class="info">
+											<span class="weight">125г.</span>
+											<span class="price">12,50грн.</span>
+										</div>
+										<div class="btn-disable">
+											<a href="#">Запретить</a>
+										</div>
+									</article>
+								</div>
+							</div>
+							<!--apply class active to btn-->
+							<div class="btn-disable">
+								<a href="#">Запретить продукты</a>
 							</div>
 						</div>
 					</div>
